--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,10 @@
       <version>1.6</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.2</version>
+    </dependency>
   </dependencies>
 </project>
